--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"react-scripts start --config ./webpack.config.js\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "node src/server/server.mjs"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
