--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "register-service-worker": "^1.7.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
