--- a/.htaccess
+++ b/.htaccess
@@ -11,14 +11,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ build/index.html [QSA,L]
 
-# Cache control headers for static files
-<FilesMatch "\.(html|js|css|png|jpg|jpeg|gif|ico|svg|webp)$">
-    Header set Cache-Control "max-age=31536000, public"
-</FilesMatch>
-
-# Ensure index.html is always fetched from the server
-<FilesMatch "index.html$">
-    Header set Cache-Control "no-cache, no-store, must-revalidate"
-    Header set Pragma "no-cache"
-    Header set Expires "0"
+# Set caching for static files
+<FilesMatch "\.(jpg|jpeg|png|gif|css|js|ico|svg)$">
+  Header set Cache-Control "max-age=3600, public"
 </FilesMatch>
